first attempt at pyplot

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -1125,6 +1125,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using pyplot.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m counts \u001b[39m=\u001b[39m clean_df[\u001b[39m'\u001b[39m\u001b[39mDrug Regimen\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\n\u001b[1;32m----> 4\u001b[0m x_axis \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39mlen\u001b[39m(counts))\n\u001b[0;32m      6\u001b[0m plt\u001b[39m.\u001b[39mbar(x_axis, counts, width \u001b[39m=\u001b[39m \u001b[39m0.7\u001b[39m, zorder\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[0;32m      8\u001b[0m tick_locations \u001b[39m=\u001b[39m [value \u001b[39mfor\u001b[39;00m value \u001b[39min\u001b[39;00m x_axis]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using pyplot.\n",
+    "counts = clean_df['Drug Regimen'].value_counts()\n",
+    "\n",
+    "x_axis = np.arange(len(counts))\n",
+    "\n",
+    "plt.bar(x_axis, counts, width = 0.7, zorder=3)\n",
+    "\n",
+    "tick_locations = [value for value in x_axis]\n",
+    "plt.xticks(tick_locations, counts.index.values)\n",
+    "plt.xticks(rotation=90)\n",
+    "\n",
+    "# Set labels for axes\n",
+    "plt.xlabel(\"Drug Regimen\")\n",
+    "plt.ylabel(\"Number of Data Points\")\n",
+    "plt.title('Number of Data Points for Each Treatment Regimen')\n",
+    "\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
