--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -155,38 +155,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "g989    13\n",
-       "b128    10\n",
-       "q787    10\n",
-       "s337    10\n",
-       "q511    10\n",
-       "        ..\n",
-       "f932     1\n",
-       "b447     1\n",
-       "u153     1\n",
-       "t573     1\n",
-       "o848     1\n",
-       "Name: Mouse ID, Length: 249, dtype: int64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Checking the number of mice.\n",
-    "data_df['Mouse ID'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -202,16 +170,6 @@
     "# Checking the number of mice. $$\n",
     "mouse_count = len(data_df['Mouse ID'].unique())\n",
     "print(mouse_count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Our data should be uniquely identified by Mouse ID and Timepoint\n",
-    "# Get the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n"
    ]
   },
   {
@@ -716,6 +674,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#why doesn't this one work like the other one?\n",
     "clean_mouse_count = len(clean_df['Mouse ID'].unique())\n",
     "print(clean_mouse_count)"
    ]
