--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4  Female           9          22  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "g989      Female          21          26  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "b128      Female           9          22  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,127 +545,6 @@
     "# Create a clean DataFrame by dropping the duplicate mouse by its ID. $\n",
     "clean_df = index_data_df.drop([\"g989\"])\n",
     "clean_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mouse ID</th>\n",
-       "      <th>Timepoint</th>\n",
-       "      <th>Tumor Volume (mm3)</th>\n",
-       "      <th>Metastatic Sites</th>\n",
-       "      <th>Drug Regimen</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age_months</th>\n",
-       "      <th>Weight (g)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>b128</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Capomulin</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>9</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>f932</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ketapril</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>15</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>g107</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ketapril</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>2</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>a457</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ketapril</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>11</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>c819</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ketapril</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Mouse ID  Timepoint  Tumor Volume (mm3)  Metastatic Sites Drug Regimen  \\\n",
-       "0     b128          0                45.0                 0    Capomulin   \n",
-       "1     f932          0                45.0                 0     Ketapril   \n",
-       "2     g107          0                45.0                 0     Ketapril   \n",
-       "3     a457          0                45.0                 0     Ketapril   \n",
-       "4     c819          0                45.0                 0     Ketapril   \n",
-       "\n",
-       "      Sex  Age_months  Weight (g)  \n",
-       "0  Female           9          22  \n",
-       "1    Male          15          29  \n",
-       "2  Female           2          29  \n",
-       "3  Female          11          30  \n",
-       "4    Male          21          25  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n"
    ]
   },
   {
@@ -708,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +739,7 @@
        "Zoniferol                   6.966589                0.516398  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +906,7 @@
        "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +938,7 @@
        "Text(0, 0.5, 'Number of Data Points for each Drug Regimen')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1085,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,9 +1064,55 @@
     "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
     "\n",
     "# Start by getting the last (greatest) timepoint for each mouse\n",
+    "greatest_timepoint = clean_df.groupby(['Mouse ID'])['Timepoint'].max()\n",
+    "greatest_timepoint = greatest_timepoint.reset_index()\n",
     "\n",
     "\n",
-    "# Merge this group df with the original DataFrame to get the tumor volume at the last timepoint\n"
+    "# Merge this group df with the original DataFrame to get the tumor volume at the last timepoint\n",
+    "merged_clean_df = greatest_timepoint.merge(clean_df,on=['Mouse ID', 'Timepoint'],how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (2099192248.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[20], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    final_tumor_volumes = merged_clean_df.loc(merged_clean_df[\"Drug Regimen\"] == drug name, 'Tumor Volume (mm3)')\u001b[0m\n\u001b[1;37m                                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Put treatments into a list for for loop (and later for plot labels)\n",
+    "treatments = [\"Capomulin\", \"Ramicane\", \"Infubinol\", \"Ceftamin\" ]\n",
+    "\n",
+    "# Create empty list to fill with tumor vol data (for plotting)\n",
+    "tumor_volume = []\n",
+    "\n",
+    "\n",
+    "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "for drug in treatments:\n",
+    "    \n",
+    "    # Locate the rows which contain mice on each drug and get the tumor volumes\n",
+    "    final_tumor_volumes = merged_clean_df.loc(merged_clean_df[\"Drug Regimen\"] == drug name, 'Tumor Volume (mm3)')\n",
+    "   \n",
+    "    \n",
+    "    # add subset \n",
+    "    tumor_volume.append(final_tumor_volumes)\n",
+    "    \n",
+    "    # Determine outliers using upper and lower bounds\n",
+    "    quartiles = final_tumor_volumes.quantile([.25,.5,.75])\n",
+    "    lowerq = quartiles[0.25]\n",
+    "    upperq = quartiles[0.75]\n",
+    "    iqr = upper-lowerq\n",
+    "    lower_bound = lowerq - (1.5*iqr)\n",
+    "    upper_bound = upperq + (1.5*iqr)\n",
+    "    outliers = final_tumor_volumes.loc[(final_tumor_volumes < lower_bound) | (final_tumor_volumes > upper_bound)]\n",
+    "    print(f\"{drug} potential outliers: {outliers}\")\n"
    ]
   },
   {
@@ -1209,9 +1134,10 @@
    ],
    "source": [
     "# Put treatments into a list for for loop (and later for plot labels)\n",
-    "\n",
+    "treatments = [\"Capomulin\", \"Ramicane\", \"Infubinol\", \"Ceftamin\" ]\n",
     "\n",
     "# Create empty list to fill with tumor vol data (for plotting)\n",
+    "\n",
     "\n",
     "\n",
     "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
