duplicate mouse ids

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "      <th>0</th>\n",
        "      <td>b128</td>\n",
        "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
+       "      <td>45.0</td>\n",
        "      <td>0</td>\n",
        "      <td>Capomulin</td>\n",
        "      <td>Female</td>\n",
@@ -64,47 +64,47 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>b128</td>\n",
-       "      <td>5</td>\n",
-       "      <td>45.651331</td>\n",
+       "      <td>f932</td>\n",
        "      <td>0</td>\n",
-       "      <td>Capomulin</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>9</td>\n",
-       "      <td>22</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ketapril</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>15</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>b128</td>\n",
-       "      <td>10</td>\n",
-       "      <td>43.270852</td>\n",
+       "      <td>g107</td>\n",
        "      <td>0</td>\n",
-       "      <td>Capomulin</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ketapril</td>\n",
        "      <td>Female</td>\n",
-       "      <td>9</td>\n",
-       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>b128</td>\n",
-       "      <td>15</td>\n",
-       "      <td>43.784893</td>\n",
+       "      <td>a457</td>\n",
        "      <td>0</td>\n",
-       "      <td>Capomulin</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ketapril</td>\n",
        "      <td>Female</td>\n",
-       "      <td>9</td>\n",
-       "      <td>22</td>\n",
+       "      <td>11</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>b128</td>\n",
-       "      <td>20</td>\n",
-       "      <td>42.731552</td>\n",
+       "      <td>c819</td>\n",
        "      <td>0</td>\n",
-       "      <td>Capomulin</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>9</td>\n",
-       "      <td>22</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ketapril</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -112,21 +112,21 @@
       ],
       "text/plain": [
        "  Mouse ID  Timepoint  Tumor Volume (mm3)  Metastatic Sites Drug Regimen  \\\n",
-       "0     b128          0           45.000000                 0    Capomulin   \n",
-       "1     b128          5           45.651331                 0    Capomulin   \n",
-       "2     b128         10           43.270852                 0    Capomulin   \n",
-       "3     b128         15           43.784893                 0    Capomulin   \n",
-       "4     b128         20           42.731552                 0    Capomulin   \n",
+       "0     b128          0                45.0                 0    Capomulin   \n",
+       "1     f932          0                45.0                 0     Ketapril   \n",
+       "2     g107          0                45.0                 0     Ketapril   \n",
+       "3     a457          0                45.0                 0     Ketapril   \n",
+       "4     c819          0                45.0                 0     Ketapril   \n",
        "\n",
        "      Sex  Age_months  Weight (g)  \n",
        "0  Female           9          22  \n",
-       "1  Female           9          22  \n",
-       "2  Female           9          22  \n",
-       "3  Female           9          22  \n",
-       "4  Female           9          22  "
+       "1    Male          15          29  \n",
+       "2  Female           2          29  \n",
+       "3  Female          11          30  \n",
+       "4    Male          21          25  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
-    "import numpy as np\n",
+    "\n",
     "\n",
     "# Study data files\n",
     "mouse_metadata_path = \"data/Mouse_metadata.csv\"\n",
@@ -147,15 +147,15 @@
     "study_results = pd.read_csv(study_results_path)\n",
     "\n",
     "# Combine the data into a single DataFrame\n",
-    "data_df = pd.merge(study_results, mouse_metadata, how='outer', on='Mouse ID')\n",
+    "single_df = pd.merge(study_results, mouse_metadata, how=\"left\", on=\"Mouse ID\")\n",
     "\n",
     "# Display the data table for preview\n",
-    "data_df.head()"
+    "single_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,13 +168,13 @@
    ],
    "source": [
     "# Checking the number of mice. $$\n",
-    "mouse_count = len(data_df['Mouse ID'].unique())\n",
+    "mouse_count = len(single_df['Mouse ID'].unique())\n",
     "print(mouse_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -183,19 +183,21 @@
        "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Our data should be uniquely identified by Mouse ID and Timepoint\n",
-    "# Get the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n"
+    "# Get the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n",
+    "duplicate_ids = single_df.loc[single_df.duplicated(subset=['Mouse ID', 'Timepoint']),'Mouse ID'].unique()\n",
+    "duplicate_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -407,14 +409,14 @@
        "g989      Female          21          26  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Optional: Get all the data for the duplicate mouse ID. $\n",
-    "index_data_df = data_df.set_index('Mouse ID')\n",
+    "index_data_df = single_df.set_index('Mouse ID')\n",
     "index_data_df.loc['g989']"
    ]
   },
@@ -1279,7 +1281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
